<resources>
    <string name="app_name">ShoeStore</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_title">Login Here</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="new_user_string">New User</string>
    <string name="login_text_string">Login</string>
    <string name="brand_name_string">The Shoe Store</string>
    <string name="welcome_string">Welcome To:</string>
    <string name="shoe_store_title">The Shoe Store</string>
    <string name="Instructions_string">See Instructions</string>
    <string name="instructions_title">Instructions</string>
    <string name="what_to_do_string">Once you hit continue, you will be directed to the inventory where
    there is thousands of shoes to choose from for both Men and Women. When you find something you
    like, send it to your shopping cart. After you find all the items on your list, you will check
    them out through your shopping cart to complete the purchase. Thank you for shopping at THe Shoe Store</string>
    <string name="continue_string">Continue</string>
    <string name="logout_string">Logout</string>
    <string name="cancel_string">Cancel</string>
    <string name="save_string">Save</string>
    <string name="add_shoe_title">Add New Shoe</string>
    <string name="shoe_name_string">NAME OF SHOE</string>
    <string name="size_string">SIZE</string>
    <string name="company_string">SHOE BRAND NAME</string>
    <string name="description_string">DESCRIPTION</string>
</resources>
