<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title_instructions"
            style="@style/title_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instructions_title" />

        <ScrollView
            android:id="@+id/scroll_instructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:id="@+id/detail_instructions"
                style="@style/title_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/what_to_do_string"
                android:textSize="25sp" />
        </ScrollView>

        <Button
            android:id="@+id/continue_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#000000"
            android:text="@string/continue_string"
            android:textColor="@android:color/white" />

    </LinearLayout>
</layout>